<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="com.moodwu.taijie.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="32dp"
        android:text="@string/login_title"/>

    <EditText
        android:layout_marginTop="57dp"
        android:layout_width="321dp"
        android:layout_height="46dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_edit_box"
        android:textColor="#fff"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:singleLine="true"
        android:hint="@string/login_id"/>

    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="321dp"
        android:layout_height="46dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_edit_box"
        android:textColor="#fff"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:password="true"
        android:singleLine="true"
        android:hint="@string/login_password" />

    <Button
        android:layout_marginTop="25dp"
        android:layout_width="321dp"
        android:layout_height="46dp"
        android:background="@drawable/login_btn"
        android:text="@string/login_check"
        android:textSize="18dp"
        android:textColor="#fff"
        android:id="@+id/btn_login"/>

    <TextView
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        android:id="@+id/btn_register"/>

</LinearLayout>
